[package]
name = "rahmen"
version = "0.1.4"
authors = ["Moritz Hoffmann <antiguru@gmail.com>", "sys3175 <https://github.com/sys3175>"]
edition = "2018"
license = "GPL"
description = "Rahmen is a lightweight image presenter"
readme = "README.md"

[features]
default = []

[[bin]]
name = "rahmen"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std"] }
config = "0.11"
convert_case = "0.4.0"
ctrlc = "3.1.9"
fltk = { version = "=1.0.12", optional = true, features = ["fltk-shared"] }
font-kit = "0.10.1"
framebuffer = "0.2.2"
glob = "0.3.0"
itertools = "0.10.1"
memmap = "0.7.0"
mozjpeg = { version = "0.9.0", default-features = false }
pathfinder_geometry = "0.5.1"
rexiv2 = "0.9.1"
regex = "1.5.4"
serde = "1.0.126"
serde_derive = "1.0.126"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
xdg = "2.2.0"

[dependencies.image]
version = "0.23.14"
default-features = false
# Disable jpeg_rayon
features = ["jpeg"]

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]

[package.metadata.deb]
maintainer = "Moritz Hoffmann <antiguru@gmail.com>"
copyright = "2021, Moritz Hoffmann <antiguru@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
A simple tool to show images on a screen with little dependencies and resource requirements."""
depends = "$auto"
section = "utility"
priority = "optional"
conf-files = ["/etc/rahmen.toml"]
assets = [
    ["rahmen.toml", "etc/", "644"],
    ["target/release/rahmen", "usr/bin/", "755"],
]
