[package]
name = "rahmen"
version = "0.2.0"
authors = ["Moritz Hoffmann <antiguru@gmail.com>", "sys3175 <https://github.com/sys3175>"]
edition = "2024"
rust-version = "1.85"
license = "GPL"
description = "Rahmen is a lightweight image presenter"
readme = "README.md"

[features]
default = []

[[bin]]
name = "rahmen"

[profile.release]
debug = true

[dependencies]
chrono = "0.4"
clap = { version = "4", default-features = false, features = ["std", "color", "help", "usage", "error-context"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
convert_case = "0.11"
ctrlc = "3"
env_logger = "0.11"
font-kit = "0.14"
framebuffer = "0.3"
glob = "0.3"
itertools = "0.14"
log = "0.4"
minifb = { version = "0.28", optional = true }
mozjpeg = { version = "0.10", default-features = false }
pathfinder_geometry = "0.5"
regex = "1"
rexiv2 = "0.10"
serde = { version = "1", features = ["derive"] }
timely = "0.12"
xdg = "3"

[dependencies.image]
version = "0.25"
default-features = false
# Disable jpeg_rayon
features = ["jpeg", "png"]

[dependencies.pyo3]
version = "0.28"
features = ["auto-initialize"]

[package.metadata.deb]
maintainer = "Moritz Hoffmann <antiguru@gmail.com>"
copyright = "2021, Moritz Hoffmann <antiguru@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
A simple tool to show images on a screen with little dependencies and resource requirements."""
depends = "$auto"
section = "utility"
priority = "optional"
conf-files = ["/etc/rahmen.toml"]
assets = [
    ["rahmen.toml", "etc/", "644"],
    ["target/release/rahmen", "usr/bin/", "755"],
]
