[package]
name = "rahmen-exiv2"
version = "0.2.0"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL"
description = "Minimal safe wrapper over libexiv2 for rahmen"

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"
