[package]
name = "rahmen-exiv2"
version = "0.2.1"
authors = ["Moritz Hoffmann <antiguru@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Minimal safe wrapper over libexiv2 for rahmen"
repository = "https://github.com/antiguru/rahmen"
homepage = "https://github.com/antiguru/rahmen"
documentation = "https://docs.rs/rahmen-exiv2"
readme = "README.md"
keywords = ["exiv2", "exif", "metadata", "image", "iptc"]
categories = ["api-bindings", "multimedia::images"]

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"
pkg-config = "0.3"
